package org.uned.practicatw.model;

public enum Nivel {
    BASICO,
    INTERMEDIO,
    AVANZADO
}
